--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Harish Madineni",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
     "lodash": "^4.17.21",
     "xlsx": "^0.18.5"
   }
